# passkey-kit

contracts/: Cargo.toml  Makefile
contracts/.soroban/identity/: default.toml
contracts/recovery/: Cargo.toml
contracts/recovery/src/: lib.rs  test.rs  types.rs
contracts/securer/: Cargo.toml
contracts/securer/src/: lib.rs  policy_context.rs  test.rs  types.rs
contracts/smart-wallet-utils/: Cargo.toml
contracts/smart-wallet-utils/src/: lib.rs
contracts/smart-wallet/src/: lib.rs  policy_context.rs  signer.rs
contracts/webauthn-factory/src/: lib.rs
contracts/webauthn-wallet-interface/src/: lib.rs  types.rs
contracts/webauthn-wallet/src/: lib.rs
demo/src/: App.svelte
src/: kit.ts
