[package]
name = "recovery"
version = "0.0.0"
authors = ["Nicolas Beaudouin <pro@nicolasbeaudouin.com>"]
license = "Apache-2.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
testutils = []

[dependencies]
soroban-sdk = { workspace = true }
smart-wallet-interface = { workspace = true }
smart-wallet = { workspace = true}
smart-wallet-utils = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }